# ids_multi_cam

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: object_info.msg
data_sync_node/: CMakeLists.txt  package.xml
data_sync_node/include/: data_sync.h
data_sync_node/src/: main.cpp
ids_multi_cam/: CMakeLists.txt  package.xml
ids_multi_cam/config/: left_cam_info.yaml  right_cam_info.yaml  rviz.rviz
ids_multi_cam/include/: acquisitionworker.h  chronometer.h  displaywindow.h  mainwindow.h
ids_multi_cam/launch/: camera_launch.launch  distortion_correction.launch
ids_multi_cam/src/: acquisitionworker.cpp  chronometer.cpp  displaywindow.cpp  main.cpp  mainwindow.cpp
radar/: CMakeLists.txt  package.xml
radar/launch/: radar.launch
radar/src/: radar_init.py
